--- a/styles/main.css
+++ b/styles/main.css
@@ -74,7 +74,8 @@
     align-items: center;
     justify-content: center;
     text-shadow: 1px 1px 2px black;
-    background-image: url("/images/background.jpg");
+    /* background-size: cover; */
+    background-image: url("./images/background.jpg");
 }
 
 /* /LOADER */
