--- a/styles/main.css
+++ b/styles/main.css
@@ -74,7 +74,7 @@
     align-items: center;
     justify-content: center;
     text-shadow: 1px 1px 2px black;
-    /* background-size: cover; */
+    background-size: cover;
     background-image: url("../images/background.jpg");
 }
 
